# AgenticAccountingClose

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_server.py
.github/workflows/: ci.yml
docs/: PROJECT_OVERVIEW.md
src/: __init__.py  crew.py
src/agents/: __init__.py  definitions.py
src/api/: __init__.py  routes.py
src/data/: database.py
src/docs/: accounting_policies.md  close_procedures.md  sox_compliance_guide.md
src/governance/: __init__.py  engine.py  sox_controls.py
src/models/: __init__.py  schemas.py
src/tasks/: __init__.py  definitions.py
src/tools/: __init__.py  accounting_tools.py  rag_tools.py
tests/: conftest.py  test_api.py  test_database.py  test_governance.py  test_models.py
